; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_rw.c_rdma_rw_inv_key.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_rw.c_rdma_rw_inv_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rdma_rw_reg_ctx = type { %struct.TYPE_7__, %struct.TYPE_5__, %struct.TYPE_8__* }
%struct.TYPE_7__ = type { i32*, %struct.TYPE_6__, i32 }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_8__ = type { i32, i64 }

@IB_WR_LOCAL_INV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rdma_rw_reg_ctx*)* @rdma_rw_inv_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rdma_rw_inv_key(%struct.rdma_rw_reg_ctx* %0) #0 {
  %2 = alloca %struct.rdma_rw_reg_ctx*, align 8
  %3 = alloca i32, align 4
  store %struct.rdma_rw_reg_ctx* %0, %struct.rdma_rw_reg_ctx** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.rdma_rw_reg_ctx*, %struct.rdma_rw_reg_ctx** %2, align 8
  %5 = getelementptr inbounds %struct.rdma_rw_reg_ctx, %struct.rdma_rw_reg_ctx* %4, i32 0, i32 2
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %32

10:                                               ; preds = %1
  %11 = load i32, i32* @IB_WR_LOCAL_INV, align 4
  %12 = load %struct.rdma_rw_reg_ctx*, %struct.rdma_rw_reg_ctx** %2, align 8
  %13 = getelementptr inbounds %struct.rdma_rw_reg_ctx, %struct.rdma_rw_reg_ctx* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 2
  store i32 %11, i32* %14, align 4
  %15 = load %struct.rdma_rw_reg_ctx*, %struct.rdma_rw_reg_ctx** %2, align 8
  %16 = getelementptr inbounds %struct.rdma_rw_reg_ctx, %struct.rdma_rw_reg_ctx* %15, i32 0, i32 2
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.rdma_rw_reg_ctx*, %struct.rdma_rw_reg_ctx** %2, align 8
  %21 = getelementptr inbounds %struct.rdma_rw_reg_ctx, %struct.rdma_rw_reg_ctx* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  store i32 %19, i32* %23, align 8
  %24 = load %struct.rdma_rw_reg_ctx*, %struct.rdma_rw_reg_ctx** %2, align 8
  %25 = getelementptr inbounds %struct.rdma_rw_reg_ctx, %struct.rdma_rw_reg_ctx* %24, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load %struct.rdma_rw_reg_ctx*, %struct.rdma_rw_reg_ctx** %2, align 8
  %28 = getelementptr inbounds %struct.rdma_rw_reg_ctx, %struct.rdma_rw_reg_ctx* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  store i32* %26, i32** %29, align 8
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %36

32:                                               ; preds = %1
  %33 = load %struct.rdma_rw_reg_ctx*, %struct.rdma_rw_reg_ctx** %2, align 8
  %34 = getelementptr inbounds %struct.rdma_rw_reg_ctx, %struct.rdma_rw_reg_ctx* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 0
  store i32* null, i32** %35, align 8
  br label %36

36:                                               ; preds = %32, %10
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
